<resources>
    <string name="app_name">Vliloom</string>
    <string name="app_name_uppercase">VLILOOM</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="favorite">Favorite</string>
    <string name="more">More</string>
    <string name="popular_now">Popular Now</string>
    <string name="cover_video">Cover Video</string>
    <string name="sign_video">Sign Video</string>
    <string name="filter_video">Filter Video</string>
    <string name="search_video">Search free video</string>
    <string name="videos">Videos</string>
    <string name="back">Back</string>
    <string name="filters">Filters</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="clear">Clear</string>
    <string name="orientation">Orientation</string>
    <string name="all_orientation">All Orientation</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="sizes">Sizes</string>
    <string name="all_sizes">All Sizes</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="preview_image_video">Preview Image Video</string>
    <string name="mini_preview">Mini Preview</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="view_creator_underline"><![CDATA[<u>View Creator</u>]]></string>
    <string name="my_favorites">My Favorites</string>
    <string name="delete">Delete</string>
    <string name="title_delete_favorites">Delete All Favorites?</string>
    <string name="description_delete_favorites">Are you sure want to delete all your favorite videos?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="data_not_found">Data not found</string>
    <string name="select_the_size">Select the Size</string>
    <string name="alert_need_storage_permission">Storage permission is required</string>
    <string name="download_video_start">Download started, check notifications when done</string>
    <string name="download_video_success">Video saved to gallery</string>
    <string name="download_video_failed">Failed to download video</string>
    <string name="copy_link">Copy Link</string>
    <string name="share_link">Share Link</string>
    <string name="share_file_video">Share File Video</string>
    <string name="url_copied">Link video copied to clipboard</string>
    <string name="scroll_to_top">Scroll to Top</string>
    <string name="notification_permission">Notification Permission</string>
    <string name="enable_notification_message">Enable notifications to get alerted when your video is ready.</string>
    <string name="allow">Allow</string>
    <string name="preparing_your_video">Preparing your video…</string>
    <string name="widget_image">Widget Image</string>
    <string name="widget_next">Widget Next</string>
    <string name="trending_now">Trending Now</string>
    <string name="version">Version</string>
    <string name="customize_widget">Customize Widget</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="rate_us">Rate Us</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="about">About</string>
    <string name="menu">Menu</string>
    <string name="sample_keyword">Example: nature, flower, etc.</string>
    <string name="enter_keyword">Enter Keyword</string>
    <string name="refresh_time">Refresh Time</string>
    <string name="three_minutes">3 Minutes</string>
    <string name="five_minutes">5 Minutes</string>
    <string name="ten_minutes">10 Minutes</string>
    <string name="all">All</string>
    <string name="total_video">Total Video</string>
    <string name="apply">Apply</string>
    <string name="keyword_already_added">Keyword already added!</string>
    <string name="keyword_already_max">Maximum 7 keywords can be added</string>
    <string name="keyword_empty">Keyword not added yet</string>
    <string name="sort">Sort</string>
    <string name="random">Random</string>
    <string name="sequence">Sequence</string>
    <string name="setup_widget_success">Setup widget successfully</string>
    <string name="setup_widget_failed">Setup widget failed</string>
</resources>