<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:background="@drawable/bg_rounded_bottom_sheet">

    <TextView
        android:id="@+id/titleBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/customize_widget"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:fontFamily="@font/montserrat_medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/enter_keyword"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="24dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/inputKeyword"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:background="@drawable/bg_search"
            android:drawableEnd="@drawable/ic_clear"
            android:drawableTint="@android:color/darker_gray"
            android:drawablePadding="4dp"
            android:hint="@string/sample_keyword"
            android:importantForAutofill="no"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:fontFamily="@font/montserrat_regular" />

        <ImageButton
            android:id="@+id/addKeyword"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_btn_circle_outline"
            android:contentDescription="@string/enter_keyword"
            android:src="@drawable/ic_add"
            app:tint="@android:color/white" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvKeyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/orientation"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/orientationAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="12dp"
            android:gravity="center"
            android:background="@drawable/bg_filter">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_regular" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/orientationPortrait"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="12dp"
            android:layout_marginHorizontal="8dp"
            android:gravity="center"
            android:background="@drawable/bg_filter">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portrait"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_regular" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/orientationLandscape"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="12dp"
            android:gravity="center"
            android:background="@drawable/bg_filter">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/landscape"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_regular" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/refresh_time"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/refreshTime3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="12dp"
            android:gravity="center"
            android:background="@drawable/bg_filter">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_minutes"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_regular" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/refreshTime5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="12dp"
            android:layout_marginHorizontal="8dp"
            android:gravity="center"
            android:background="@drawable/bg_filter">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five_minutes"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_regular" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/refreshTime10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="12dp"
            android:gravity="center"
            android:background="@drawable/bg_filter">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten_minutes"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_regular" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/total_video"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <SeekBar
            android:id="@+id/totalVideoSlider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="35"
            android:progress="0" />

        <TextView
            android:id="@+id/totalVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_regular" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_btn"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_medium" />

</LinearLayout>