<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingHorizontal="24dp"
    android:orientation="vertical"
    android:background="@drawable/bg_rounded_bottom_sheet">

    <TextView
        android:id="@+id/titleBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/more"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:fontFamily="@font/montserrat_medium" />

    <LinearLayout
        android:id="@+id/copyLink"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_filter"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/copy_link"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_medium" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/button_color"
            app:srcCompat="@drawable/ic_link" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shareLink"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_filter"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share_link"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_medium" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/button_color"
            app:srcCompat="@drawable/ic_share" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shareFileVideo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_filter"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share_file_video"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_medium" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/button_color"
            app:srcCompat="@drawable/ic_send" />

    </LinearLayout>

</LinearLayout>